pkg/localenv/microservice/manifests/backend/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backend
  namespace: microservices
  labels:
    app.kubernetes.io/name: backend-peer-auth
    app.kubernetes.io/component: security
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  mtls:
    mode: STRICT
