pkg/localenv/microservice/manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microservices
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: app-tier
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: backend
