pkg/localenv/microservice/manifests/backend/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: backend
  namespace: microservices
  labels:
    app.kubernetes.io/name: backend-sidecar
    app.kubernetes.io/component: networking
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: backend
  egress:
  - hosts:
    - "./database.microservices.svc.cluster.local"
    - "istio-system/*"
    - "./example.com"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
